Fix spacing

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -36,6 +36,7 @@ a {
 
     padding: 90px;
     display: flex;
+    justify-content: space-evenly;
     
     
     
@@ -96,5 +97,5 @@ a {
  
 }
 .info-image {
-    
+
 }
